--- a/projects/homebackend/Foundation/build.gradle
+++ b/projects/homebackend/Foundation/build.gradle
@@ -1,31 +1,25 @@
-buildscript {
-    apply from: '../../../config/kotlin/dependencies/latest/base.gradle.kts'
-    apply from: '../../../config/kotlin/dependencies/latest/libs.gradle.kts'
-    apply from: '../../../config/kotlin/dependencies/latest/logging.gradle.kts'
-}
-
 dependencies {
-    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: project.ext.log4jVersion
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: "2.17.1"
 
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: project.ext.springBootVersion
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: project.ext.springBootVersion
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: project.ext.springBootVersion
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: "2.4.5"
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: "2.4.5"
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: "2.4.5"
 
     //mail
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: project.ext.springBootVersion
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-freemarker', version: project.ext.springBootVersion
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: "2.4.5"
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-freemarker', version: "2.4.5"
     
     //redis
-    compile group: 'org.springframework.data', name: 'spring-data-redis', version: project.ext.springBootVersion
-    compile group: 'redis.clients', name: 'jedis', version: project.ext.jedis
+    compile group: 'org.springframework.data', name: 'spring-data-redis', version: "2.4.5"
+    compile group: 'redis.clients', name: 'jedis', version: "3.5.2"
 
-    compile group: 'com.google.code.gson', name: 'gson', version: project.ext.gsonVersion
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: project.ext.jacksonVersion
-    compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: project.ext.jacksonVersion
+    compile group: 'com.google.code.gson', name: 'gson', version: "2.8.6"
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: "2.12.3"
+    compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: "2.12.3"
 
-    compile group: 'mysql', name: 'mysql-connector-java', version: project.ext.mysqlJavaConnector
+    compile group: 'mysql', name: 'mysql-connector-java', version: "8.0.23"
 
-    compile group: 'org.apache.commons', name: 'commons-text', version: project.ext.commonsText
+    compile group: 'org.apache.commons', name: 'commons-text', version: "1.9"
 
     // https://stackoverflow.com/questions/48986999/classnotfoundexception-for-javax-xml-bind-jaxbexception-with-spring-boot-when-sw
     compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
