--- a/projects/homebackend/LoginServer/build.gradle
+++ b/projects/homebackend/LoginServer/build.gradle
@@ -8,7 +8,7 @@ apply plugin: 'war'
 build {
     war {
         archivesBaseName = 'LoginServer'
-        libsDirName = new File(projectDir, "/../../module-deployment/service-tomcat/webapps")
+        libsDirName = new File(projectDir, "/../../../deployments/module-deployment/service-tomcat/webapps")
         manifest {
             attributes 'Implementation-Version': new Date().format('yyMMddHHmm')
         }
