--- a/projects/homebackend/Foundation/build.gradle
+++ b/projects/homebackend/Foundation/build.gradle
@@ -1,17 +1,17 @@
 dependencies {
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: "2.17.1"
 
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: "2.4.13"
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: "2.4.13"
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: "2.4.13"
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: "2.7.2"
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: "2.7.2"
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: "2.7.2"
 
     //mail
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: "2.4.13"
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-freemarker', version: "2.4.13"
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: "2.7.2"
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-freemarker', version: "2.7.2"
     
     //redis
-    compile group: 'org.springframework.data', name: 'spring-data-redis', version: "2.4.13"
-    compile group: 'redis.clients', name: 'jedis', version: "3.5.2"
+    compile group: 'org.springframework.data', name: 'spring-data-redis', version: "2.7.2"
+    compile group: 'io.lettuce', name: 'lettuce-core', version: '6.2.0.RELEASE'
 
     compile group: 'com.google.code.gson', name: 'gson', version: "2.8.6"
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: "2.12.3"
