Update to gradle 7.3.3

--- a/projects/homebackend/LoginServer/build.gradle
+++ b/projects/homebackend/LoginServer/build.gradle
@@ -1,7 +1,7 @@
 group 'net.rickiekarp.loginserver'
 
 dependencies {
-    compile project(':Foundation')
+    implementation project(':Foundation')
 }
 
 apply plugin: 'war'
