--- a/projects/homebackend/Foundation/build.gradle
+++ b/projects/homebackend/Foundation/build.gradle
@@ -1,26 +1,26 @@
 dependencies {
-    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: "2.17.1"
+    api group: 'org.apache.logging.log4j', name: 'log4j-core', version: "2.17.1"
 
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: "2.7.6"
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: "2.7.6"
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: "2.7.6"
+    api group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: "2.7.6"
+    api group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: "2.7.6"
+    api group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: "2.7.6"
 
     //mail
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: "2.7.6"
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-freemarker', version: "2.7.6"
+    api group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: "2.7.6"
+    api group: 'org.springframework.boot', name: 'spring-boot-starter-freemarker', version: "2.7.6"
     
     //redis
-    compile group: 'org.springframework.data', name: 'spring-data-redis', version: "2.7.6"
-    compile group: 'io.lettuce', name: 'lettuce-core', version: '6.2.0.RELEASE'
+    api group: 'org.springframework.data', name: 'spring-data-redis', version: "2.7.6"
+    api group: 'io.lettuce', name: 'lettuce-core', version: '6.2.0.RELEASE'
 
-    compile group: 'com.google.code.gson', name: 'gson', version: "2.8.6"
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: "2.12.3"
-    compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: "2.12.3"
+    implementation group: 'com.google.code.gson', name: 'gson', version: "2.8.6"
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: "2.12.3"
+    api group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: "2.12.3"
 
-    compile group: 'mysql', name: 'mysql-connector-java', version: "8.0.23"
+    implementation group: 'mysql', name: 'mysql-connector-java', version: "8.0.23"
 
-    compile group: 'org.apache.commons', name: 'commons-text', version: "1.9"
+    api group: 'org.apache.commons', name: 'commons-text', version: "1.9"
 
     // https://stackoverflow.com/questions/48986999/classnotfoundexception-for-javax-xml-bind-jaxbexception-with-spring-boot-when-sw
-    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
+    implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
 }
